; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/vmm/io/extr_vlapic.c_vlapic_post_intr.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/vmm/io/extr_vlapic.c_vlapic_post_intr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vlapic = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 (%struct.vlapic.0*, i32)* }
%struct.vlapic.0 = type opaque

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vlapic_post_intr(%struct.vlapic* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.vlapic*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.vlapic* %0, %struct.vlapic** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.vlapic*, %struct.vlapic** %4, align 8
  %8 = getelementptr inbounds %struct.vlapic, %struct.vlapic* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32 (%struct.vlapic.0*, i32)*, i32 (%struct.vlapic.0*, i32)** %9, align 8
  %11 = icmp ne i32 (%struct.vlapic.0*, i32)* %10, null
  br i1 %11, label %12, label %21

12:                                               ; preds = %3
  %13 = load %struct.vlapic*, %struct.vlapic** %4, align 8
  %14 = getelementptr inbounds %struct.vlapic, %struct.vlapic* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (%struct.vlapic.0*, i32)*, i32 (%struct.vlapic.0*, i32)** %15, align 8
  %17 = load %struct.vlapic*, %struct.vlapic** %4, align 8
  %18 = bitcast %struct.vlapic* %17 to %struct.vlapic.0*
  %19 = load i32, i32* %5, align 4
  %20 = call i32 %16(%struct.vlapic.0* %18, i32 %19)
  br label %25

21:                                               ; preds = %3
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @ipi_cpu(i32 %22, i32 %23)
  br label %25

25:                                               ; preds = %21, %12
  ret void
}

declare dso_local i32 @ipi_cpu(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
